UIP-1613 Fixed the country selector
Change-Id: Id3348dd4f0307b1b14628b60d3c5e9bf2b83335b

--- a/packages/ui-library/src/css/i18n.scss
+++ b/packages/ui-library/src/css/i18n.scss
@@ -45,6 +45,7 @@ $flagsImageExtension: 'png' !default;
     &.input-custom-select {
         .select-list {
             position: absolute;
+            top: 100%;
         }
         .input-container {
             .wrapper {
