UIP-1432 width-auto
Change-Id: Ie6eda502b42a0dd9e9149f1f4ec3f8e1d1ca2a78

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2776,7 +2776,8 @@ label {
     &.input-width-medium,
     &.input-width-large,
     &.input-width-xlarge,
-    &.input-width-full {
+    &.input-width-full
+    &.input-width-auto {
         margin-bottom: map-get($input-width-settings, 'vert-margin');
 
         input[type=text],
@@ -2817,6 +2818,21 @@ label {
     }
 }
 
+
+&.input-custom-select {
+    &.open {
+        .select-list {
+            visibility: visible;
+        }
+    }
+    .select-list {
+        visibility: hidden;
+        display: initial;
+    }
+    &.input-width-auto {
+        width: auto;
+    }
+}
 
 // DEPRECATED OR SITE-SPECIFIC STYLES --------------------------------------------------------------
 // TODO : move WP styles to WP
