UIP-1632 error on hover
Change-Id: I89dc23cc3f5e9a1cc61dfbf8fd652bfb0048d8db

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2032,6 +2032,7 @@ input[type=file] {
         input[type=password] {
             border-color: $color-input-error;
 
+            &:hover,
             &:focus {
                 @include errorDisplayCss;
             }
@@ -2050,6 +2051,7 @@ input[type=file] {
         textarea {
             border-color: $color-input-error;
 
+            &:hover,
             &:focus {
                 @include errorDisplayCss;
             }
@@ -2188,7 +2190,6 @@ input[type=file] {
         right: 0;
         height: $icon-size;
         width: $icon-size;
-        cursor: pointer;
 
         &:before {
             position: absolute;
