UIP-1637 Tables within tables display as block
Change-Id: I88942f3778869fb04631b50fd9e35c29403c549c

--- a/packages/ui-library/src/css/tables.scss
+++ b/packages/ui-library/src/css/tables.scss
@@ -4,6 +4,13 @@ table {
         display: inline-block;
         border-collapse: separate;
 
+        .grid {
+            // not sure why grids display inline-block, but grids
+            // within grids should display block, so they don't
+            // align to the bottom
+            display: block;
+        }
+
         &.width-full {
             display: table;
             width: 100%;
