--- a/packages/end-user/src/css/styles.scss
+++ b/packages/end-user/src/css/styles.scss
@@ -15,6 +15,7 @@
 @import './components/button';
 @import './components/card';
 @import './components/checkbox';
+@import './components/dropdown';
 @import './components/feedback';
 @import './components/float-label';
 @import './components/form';
