UIP-1644 : fix bad sass syntax causing build errors for some
Change-Id: I1ac8b8d49660247130d9fd0e7010997e01c7e92f

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2781,7 +2781,7 @@ label {
     &.input-width-medium,
     &.input-width-large,
     &.input-width-xlarge,
-    &.input-width-full
+    &.input-width-full,
     &.input-width-auto {
         margin-bottom: map-get($input-width-settings, 'vert-margin');
 
@@ -2824,7 +2824,7 @@ label {
 }
 
 
-&.input-custom-select {
+.input-custom-select {
     &.open {
         .select-list {
             visibility: visible;
