UIP-1655 more on topic
Change-Id: Ia603af0f6928c8173f84f0486d76faadf3fa3aee

--- a/packages/ui-library/src/css/text.scss
+++ b/packages/ui-library/src/css/text.scss
@@ -45,6 +45,13 @@
             }
         }
 
+        &.more-on-topic {
+            [class^='icon-'],
+            [class*=' icon-'] {
+                color: #2996cc;
+            }
+        }
+
         &.disabled {
             pointer-events: none;
             opacity: 0.4;
