UIP-1667 error icon placement
Change-Id: I94522efe155fbb058061e170c480ce287c2c14ec

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2120,12 +2120,15 @@ input[type=file] {
         }
         &.inline {
             .label-text {
-                padding-right: 20px;
+                padding-right: 7px;
             }
             .form-error-icon {
                 top: 5px;
                 left: 100%;
                 margin: 0;
+            }
+            &.form-error {
+                margin-right: 40px;
             }
         }
     }
