UIP-1584: Create row builder component
Change-Id: If92e94c097605cefa6b26a85844d96b046dcef8c

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -3,6 +3,7 @@
 @import 'code-view';
 @import 'forms/_keyword-search';
 @import 'forms/_translation-picker';
+@import 'rows/_row-builder';
 
 // INPUT GLOBAL VARS ---------------------------------------------------------------------------------------------------
 
