Revert "UIP-1679 dropdown none-option highlight"
This reverts commit d74ff228abdb84bc73375855407bf5c0be0046b1.

Change-Id: I611edc268610e6ff229895c19345b9207c42a62a

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -820,32 +820,9 @@ input[type=file] {
         max-height: 200px;
         overflow-y: scroll;
 
-
-        .none-option {
-            // Note: decided not to use line-height here for alignment because it causes issues e.g. large font-sizes
-            // will overlap, and also looks bad if one item overflows onto 2 lines
-            box-sizing: border-box;
-            padding: $option-padding;
-            font-size: 14px;
-            position: relative;
-            line-height: 13px;
-            color: $color-midnight;
-            cursor: pointer;
-            white-space: normal;
-
-            &:hover {
-                background-color: $color-active-blue;
-                color: $color-white;
-                display: block;
-                min-width: 100%;
-
-                &:before {
-                    background-color: $color-white;
-                }
-            }
-        }
         // each item in dropdown
-        .select-option {
+        .select-option,
+        .none-option {
             // Note: decided not to use line-height here for alignment because it causes issues e.g. large font-sizes
             // will overlap, and also looks bad if one item overflows onto 2 lines
             box-sizing: border-box;
