UIP-1687 New environment link for environment selector
Change-Id: Ia6438babb3476726b395550d523c78f19d3b7299

--- a/packages/ui-library/src/css/details-tooltip/_popover.scss
+++ b/packages/ui-library/src/css/details-tooltip/_popover.scss
@@ -198,6 +198,11 @@ $max-popover-width: 360px;
     &:hover {
         background: $color-strong-neutral-90;
     }
+    &:hover,
+    &:active {
+        color: $color-slate;
+        text-decoration: none;
+    }
 }
 
 .nav-menu__link--w-icon {
