UIP-1683 pageheader icon
Change-Id: Ifb64b842d9932f3b81c8c047811364eac882ecb6

--- a/packages/ui-library/src/css/general/_page-header.scss
+++ b/packages/ui-library/src/css/general/_page-header.scss
@@ -5,6 +5,12 @@
 
     display: flex;
     flex-wrap: nowrap;
+
+    .item-icon {
+        font-size: 24px;
+        flex-basis: 40px;
+        line-height: inherit;
+    }
 }
 
 .page-header--underlined {
@@ -56,3 +62,4 @@
         max-width: $size;
     }
 }
+
