--- a/packages/ui-library/src/css/general/_page-header.scss
+++ b/packages/ui-library/src/css/general/_page-header.scss
@@ -5,6 +5,15 @@
 
     display: flex;
     flex-wrap: nowrap;
+
+    &__icon {
+        font-size: 24px;
+        flex-basis: 40px;
+        line-height: inherit;
+        .icon__graphic {
+            line-height: inherit;
+        }
+    }
 }
 
 .page-header--underlined {
@@ -56,3 +65,4 @@
         max-width: $size;
     }
 }
+
