--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -1,3 +1,5 @@
+@import 'charting/chip-panel';
+@import 'charting/dropdown-selector';
 @import 'layout/dashboard-cards';
 @import 'layout/charts';
 @import 'layout/hero-chart';
