UIP-1652: Added SSO Attributes Template
Change-Id: I8c2da26f2ad3415edd22af488da105decabccc29

--- a/packages/ui-library/src/css/rows/_row-builder.scss
+++ b/packages/ui-library/src/css/rows/_row-builder.scss
@@ -20,4 +20,26 @@
             margin-left: 20%;
         }
     }
+
+    &--form {
+        &__row {
+            align-items: center;
+            display: inline-flex;
+            justify-content: space-between;
+        }
+
+        &__icon {
+            font-size: 20px;
+
+            &--required {
+                color: $color-dolphin;
+            }
+        }
+
+        &__input {
+            &__option {
+                color: $color-dolphin !important;
+            }
+        }
+    }
 }
