--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -483,6 +483,9 @@ $color-grey-minor-1: $color-neutral-30;
                 top: 13px;
                 left: 15px;
                 font-size: 18px;
+                width: 30px;
+                margin: 0 -5px;
+                text-align: center;
             }
             &.open {
                 @include transition(background-color 0.2s);
