UIP-1717 button bar z-index
Change-Id: I9f59ce8371b37350cda222025f0dfc372b8fc0a6

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -1222,6 +1222,7 @@ $color-grey-minor-1: $color-neutral-30;
         right: auto;
         bottom: auto;
         margin-top: $spacing-md;
+        z-index: initial;
     }
 }
 
